qttools-opensource-src (5.12.4-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Make qhelpgenerator-qt5 depend on libqt5sql5-sqlite.
  * Bump Qt build-dependencies to 5.12.4.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 14 Jun 2019 21:07:36 +0300

qttools-opensource-src (5.12.3-2) experimental; urgency=medium

  * Split qhelpgenerator and qtattributionsscanner into separate binary
    packages. This will allow us to build-depend only on small qdoc,
    qhelpgenerator and qtattributionsscanner packages for building Qt docs,
    instead of the whole qttools5-dev-tools package.
  * Update debian/libqt5designer5.symbols from arm64 build log.
  * Update debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 05 May 2019 13:04:35 +0300

qttools-opensource-src (5.12.3-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.3.
  * Update debian/libqt5designer5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 30 Apr 2019 10:51:11 +0300

qttools-opensource-src (5.12.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.2.
  * Enable qdoc build on kfreebsd-any and five mips* architectures (closes:
    #921206).
  * Update .install files.
  * Update symbols files from the current build log.
  * Use dh_missing instead of deprecated dh_install --fail-missing.
  * Use a white list of architectures where Qt WebKit is available.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 26 Mar 2019 19:06:37 +0300

qttools-opensource-src (5.11.3-4) unstable; urgency=medium

  * Limit also the libclang-dev build dependency on the architectures where
    it is available.
  * Update lintian overrides.

 -- Pino Toscano <pino@debian.org>  Sat, 12 Jan 2019 10:42:39 +0100

qttools-opensource-src (5.11.3-3) unstable; urgency=medium

  * Split qdoc into a separate package (qdoc-qt5), build it only on