@@ -1,0 +1,9 @@
+usr/lib/*/cmake/Qt5Designer/Qt5Designer_AnalogClockPlugin.cmake
+usr/lib/*/cmake/Qt5Designer/Qt5Designer_MultiPageWidgetPlugin.cmake
+usr/lib/*/cmake/Qt5Designer/Qt5Designer_QQuickWidgetPlugin.cmake
+usr/lib/*/cmake/Qt5Designer/Qt5Designer_TicTacToePlugin.cmake
+usr/lib/*/cmake/Qt5Designer/Qt5Designer_WorldTimeClockPlugin.cmake
+usr/lib/*/libQt5DesignerComponents.la
+usr/lib/*/libQt5Designer.la
+usr/lib/*/libQt5Help.la
+usr/lib/*/libQt5UiTools.la
